# llm-conductor

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASE.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pre-commit.yml  release.yml
src/llm_conductor/: __init__.py  base.py  cli.py  cli_base.py  litellm_base.py  mlflow_integration.py  observability.py  pricing.py  runner.py
src/llm_conductor/providers/: __init__.py  claude_code.py  lmstudio.py  ollama.py  openai.py  openai_codex.py  openrouter.py
tests/integration/: README.md  test_providers.py
tests/unit/: test_cli.py  test_cli_base.py  test_observability.py  test_pricing.py  test_runner.py
